--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ $(document).ready(function(){
 });
 </script>
 
-<div id="flip">JavaScript Introduction</div>
+	<img src="file:///C|/Users/Shruti/Documents/Unnamed Site 1/img1.html" width="1314" height="300" alt="image">
+	<div id="flip">JavaScript Introduction</div>
 <div id="panel">
 	<a href ="/home/aisselnew2/Shruti/tutorial/Intro.html"> About JavaScript </a>
 	</div>
