--- a/javascript/dt.html
+++ b/javascript/dt.html
@@ -12,9 +12,6 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel = "stylesheet"
-   type = "text/css"
-   href = "style.css" />
 	
 	<h2>JavaScript Data Types</h2>
 	<p>JavaScript variables can hold many <strong>data types</strong>: numbers, 
@@ -32,10 +29,13 @@ var x = {firstName:"John", lastName:"Doe"};    // Object
 	<p> Without the Data Types, A Computer cannot understand the values that are assigned and hence makes it difficult! </p>
 	
 	<p> Few More Examples </p>
-	<textarea name="textfield">
+	<p>
+	  <textarea name="textfield">
 	var x = 16 + "Volvo";
 	</textarea>
-	<a link ="Try It"> </a>
-	
-</html>
+	  <a href="dt.html">tryit</a>
+	  
+	  </p>
+	<p>&nbsp;    </p>
+	</html>
 	
