--- a/javascript/index.html
+++ b/javascript/index.html
@@ -12,7 +12,6 @@
 
 <!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -89,111 +88,239 @@
   </div>
 
 	<h2 class="m-b-80 m-t-80"> <center> Let's Get Started </center> </h2>
-	<style>
-  .carousel-inner > .item > img,
-  .carousel-inner > .item > a > img {
-      width: 70%;
-      margin: auto;
-  }
-  </style>
 	
-	<div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script> 
+$(document).ready(function(){
+    $("#flip").click(function(){
+        $("#panel").slideToggle("slow");
+    });
+});
+</script>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-
-      <div class="item active">
-        <img src="js2.jpg" alt="js2" width="460" height="345">
-        <div class="carousel-caption">
-          <h3>JS</h3>
-          <p>T</p>
+	<img src="file:///C|/Users/Shruti/Documents/Unnamed Site 1/img1.html" width="1314" height="300" alt="image">
+	<div id="flip"></div>
+<p>&nbsp;</p>
+<table width="1217" height="480" border="1" cellpadding="20" cellspacing="20">
+  <tr>
+    <td width="231"><p>&nbsp;</p>
+      <div id="div">JavaScript Introduction</div>
+        <div id="panel"> 
+          <p><a href ="E:/Aissel/day2-master/day2-master/Intro.html"> About JavaScript </a> </p>
+          <p>&nbsp;</p>
         </div>
+      <br>
+        <div id="div">JavaScript Syntax</div>
+      <div id="panel"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/syntax.html"> JS Syntax </a> </p>
+        <p>&nbsp;</p>
       </div>
-
-      <div class="item">
-        <img src="js1.png" alt="js1" width="460" height="345">
-        <div class="carousel-caption">
-          <h3>JS</h3>
-          <p>T</p>
+      <br>
+        <div id="div">JavaScript Output</div>
+      <div id="panel"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/output.html"> JS Output </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div">JavaScript OnCLick </div>
+      <div id="panel"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/onclick.html"> JS OnClick </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div">JavaScript Data Types</div>
+      <div id="panel"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/dt.html"> JS Data Types </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div">JavaScript Functions
+          <div id="div8"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/func.html"> JS Functions </a></p>
+            <p>&nbsp;            </p>
+            <div id="div9">JavaScript JSON
+              <div id="div10"> 
+                <p><a href ="E:/Aissel/day2-master/day2-master/json.html"> JS JSON </a> </p>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+            <div id="div11">JavaScript Mistakes
+              <div id="div12"> 
+                <p><a href ="E:/Aissel/day2-master/day2-master/mistakes.html"> JS Mistakes </a> </p>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+            <div id="div13">JavaScript Strict Mode
+              <div id="div14"> 
+                <p><a href ="E:/Aissel/day2-master/day2-master/strict.html"> JS Strict Mode </a> </p>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+            <div id="div15">JavaScript Errors
+              <div id="div16"> 
+                <p><a href ="E:/Aissel/day2-master/day2-master/errors.html"> JS Errors </a> </p>
+                <p>&nbsp;</p>
+              </div>
+            </div>
+          </div>
+      </div>
+    </td>
+    <td width="271"><p>&nbsp;</p>
+    <div id="div2">JavaScript Statements</div>
+        <div id="div3"> 
+          <p><a href ="E:/Aissel/day2-master/day2-master/stmts.html"> JS Statements </a> </p>
+          <p>&nbsp;</p>
         </div>
+        <br>
+        <div id="div2">JavaScript Comments</div>
+      <div id="div3"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/comments.html"> JS Comments </a> </p>
+        <p>&nbsp;</p>
       </div>
-    
-      <div class="item">
-        <img src="js.png" alt="js" width="460" height="345">
-        <div class="carousel-caption">
-          <h3>JS</h3>
-          <p></p>
+      <br>
+        <div id="div2">JavaScript Objects</div>
+      <div id="div3"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/obj.html"> JS Objects </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div2">JavaScript Scope </div>
+      <div id="div3"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/scope.html"> JS Scope </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div2">JavaScript Events</div>
+      <div id="div3"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/events.html"> JS Events </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div2">JavaScript Strings</div>
+      <div id="div3"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/strings.html"> JS Strings </a></p>
+        <p>&nbsp;        </p>
+        <div id="div17">JavaScript Reg Exp
+          <div id="div18"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/regexp.html"> JS Reg Exp </a> </p>
+            <p>&nbsp;</p>
+          </div>
         </div>
+        <div id="div19">JavaScript Reserved Words
+          <div id="div20"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/reserved.html"> JS Reserved Words </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <div id="div21">JavaScript Performance
+          <div id="div22"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/performance.html"> JS Performance </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <div id="div23">JavaScript Debugging
+          <div id="div24"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/debug.html"> JS Debugging </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+      </div></td>
+    <td width="223"><p>&nbsp;</p>
+    <div id="div4">JavaScript Dates</div>
+        <div id="div5"> 
+          <p><a href ="E:/Aissel/day2-master/day2-master/dates.html"> JS Dates </a> </p>
+          <p>&nbsp;</p>
+        </div>
+        <br>
+        <div id="div4">JavaScript Date Formats</div>
+      <div id="div5"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/d_formats.html"> JS Date Formats</a></p>
+        <p>&nbsp; </p>
       </div>
-</div>
-  
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  
-</div>
-
-
-	<div id="flip">JavaScript Introduction</div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/Intro.html"> About JavaScript </a>
-	</div>
-	<br>
-<div id="flip">JavaScript Syntax</div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/syntax.html"> JS Syntax </a>
-	</div>
-	<br>
-	
-	<div id="flip">JavaScript Output</div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/output.html"> JS Output </a>
-	</div>
-	<br>
-	
-	<div id="flip">JavaScript OnCLick </div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/onclick.html"> JS OnClick </a>
-	</div>
-	<br>
-	
-	<div id="flip">JavaScript Data Types</div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/dt.html"> JS Data Types </a>
-	</div>
-	<br>
-	
-	<div id="flip">JavaScript Functions</div>
-<div id="panel">
-	<a href ="/home/aisselnew2/Shruti/tutorial/func.html"> JS Functions </a>
-	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-
-</html>
+      <br>
+        <div id="div4">JavaScript Date Methods</div>
+      <div id="div5"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/d_mthds.html"> JS Date Methods </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div4">JavaScript Arrays </div>
+      <div id="div5"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/arr.html"> JS Arrays </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div4">JavaScript Conditions</div>
+      <div id="div5"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/condtions.html"> JS Conditions </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div4">JavaScript Forms</div>
+      <div id="div5"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/forms.html"> JS Forms </a></p>
+        <p>&nbsp;        </p>
+        <div id="div25">JavaScript Array Methods
+          <div id="div26"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/arr_mtd.html"> JS Array Methods </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <div id="div27">JavaScript Array Sort
+          <div id="div28"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/arr_sort.html"> JS Array Sort </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <div id="div29">JavaScript Break
+          <div id="div30"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/brk.html"> JS Break </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <div id="div31">JavaScript Functions
+          <div id="div32"> 
+            <p><a href ="E:/Aissel/day2-master/day2-master/func.html"> JS Functions </a> </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+      </div></td>
+    <td width="222"><div id="div6">JavaScript Object Definitions</div>
+        <div id="div7"> 
+          <p><a href ="E:/Aissel/day2-master/day2-master/obj_def.html"> Object Definitions</a></p>
+          <p>&nbsp; </p>
+        </div>
+        <br>
+        <div id="div6">JavaScript Object Methods</div>
+      <div id="div7"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/obj_methods.html"> Object Methods </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div6">JavaScript Function Definitions</div>
+      <div id="div7"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/func_def.html"> Function Definitions</a></p>
+        <p>&nbsp; </p>
+      </div>
+      <br>
+        <div id="div6">JavaScript Function Parameters </div>
+      <div id="div7"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/func_param.html"> Function Parameters </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div6">JavaScript Innovation</div>
+      <div id="div7"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/func_innovation.html"> Function Innovation </a> </p>
+        <p>&nbsp;</p>
+      </div>
+      <br>
+        <div id="div6">JavaScript Versions</div>
+      <div id="div7"> 
+        <p><a href ="E:/Aissel/day2-master/day2-master/versions_html"> JS Versions </a></p>
+        <p>&nbsp;</p>
+      </div></td>
+  </tr>
+</table>
+<p>&nbsp;</p>
+		</html>
