--- a/javascript/syntax.html
+++ b/javascript/syntax.html
@@ -31,8 +31,12 @@ JavaScript programs are constructed.</p>
 	</textarea>
 	<p> The Example shows the result when variables are added </p>
 	
-<a class="w3-btn w3-margin-bottom" href="out.html?filename=tryjs_syntax_statements" target="_blank"> Output is</a>
-</div>
+    
+    <form name="form1" method="post" action="">
+      <label>11</label>
+    </form>
+</p>
+    <p>&nbsp;        </p>
 </html>
 
 
