--- a/dt.html
+++ b/dt.html
@@ -12,11 +12,14 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+	<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+	<div id ="intro">
 	<h2>JavaScript Data Types</h2>
 	<p>JavaScript variables can hold many <strong>data types</strong>: numbers, 
 strings, objects and more:</p>
-	
+	</div>
 	<textarea name="text" cols="25" rows="5">
 var length = 16;                               // Number
 var lastName = "Johnson";                      // String
