--- a/output.html
+++ b/output.html
@@ -9,6 +9,10 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+	<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+	<div id ="intro">
 <h2>JavaScript Display Possibilities</h2>
 	<p>JavaScript can "display" data in different ways:</p>
 	<ol>
@@ -17,6 +21,7 @@
   <li>Writing into an alert box, using <strong>window.alert()</strong>.</li>
   <li>Writing into the browser console, using <strong>console.log()</strong>.</li>
 </ol>
+	</div>
 	
 	<h2> Examples in this are </h2>
 <pre class="prettyprint notranslate tryit prettyprinted" style="cursor: default;"><span class="dec">&lt;!DOCTYPE html&gt;</span><span class="pln">
