--- a/syntax.html
+++ b/syntax.html
@@ -6,8 +6,9 @@
     
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel = "stylesheet"   type = "text/css"   href = "style.css" />
 
-
+<div id= "intro">
 <p class="intro">JavaScript <strong>syntax</strong> is the set of&nbsp;rules, how 
 JavaScript programs are constructed.</p>
 	
@@ -19,6 +20,7 @@ JavaScript programs are constructed.</p>
 <p>JavaScript is a <strong>programming language</strong>.</p>
 	
 <p>JavaScript statements are separated by <strong>semicolons</strong>:</p>
+    </div>
 	
 <div class="w3-example">
 <h3>Example</h3>
