--- a/onclick.html
+++ b/onclick.html
@@ -12,9 +12,21 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+	<div id= "intro">
 	<h2>JavaScript Variables</h2>
 	<p>JavaScript variables are containers for storing data values.</p>
+	<br>
+	</div>
+	<h2> Examples </h2>
+	<table width="935" height="121" border="1" cellpadding="50" cellspacing="20">
+		<tr>
+            <td width="392"><div class="w3-padding w3-white notranslate">
+				
 <script>
+	
 	function myFunction()
 	{
   var y = document.getElementById("txt1").value;
@@ -22,6 +34,7 @@
   var x = y + z;
   document.getElementById("demo").innerHTML = x;
 	}
+	
 	</script>
 	<p>
   Click the button to calculate x.
@@ -29,12 +42,15 @@
 </p>
 <p>
   Enter first number:
-  <input type="text" id="txt1" name="text1" value="1">
-  Enter second number:
+  <input type="text" id="txt1" name="text1" value="1"><br>
+  <br>
+	Enter second number:
   <input type="text" id="txt2" name="text2" value="2">
 </p>
 <p id="demo"></p>
-	
+	<br>
+<td width="397"><div align="left">&lt;!DOCTYPE html&gt;<br />
+
 &lt;script&gt;<br />
 	function myFunction()<br />
 	{<br />
@@ -57,9 +73,5 @@
 &lt;p id="demo"&gt;&lt;/p&gt;
 	
 	
-	
-	
-</html>
-
 
 
